[package]
name = "web3ium-evm"
version = "0.1.0"
edition = "2021"


[dependencies]
alloy-signer-local = { version = "0.9.1", features = [ "mnemonic", "keystore"] }
alloy-signer = { version = "0.9.1", features = ["eip712"] }
alloy-consensus = { version = "0.9.1" }
alloy-network = "0.9.1"
alloy-rpc-types = "0.9.1"
alloy-primitives = "0.8.15"
alloy-sol-types = "0.8.16"
alloy-rlp = "0.3.10"
alloy-dyn-abi = { version = "0.8.16", features = ["eip712"] }
reqwest = { version = "0.12.12", features = ["json"] }
rand = "0.8.5"
serde = "1.0.217"
serde_json = "1.0"
k256 = "0.13.4"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "test-util"] }